--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
               with:
                   node-version: 18.16.0
 
+            - name: Install Vercel CLI
+              run: npm install -g vercel
+
             - name: Install dependencies
               run: npm ci
 
@@ -30,3 +33,6 @@ jobs:
                   vercel-token: ${{ secrets.VERCEL_TOKEN }}
                   vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
                   vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+
+            - name: Promote deploy to production
+              run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
